@@ -46,6 +46,9 @@ Release 0.21.1 - Unreleased
     HDFS-1665. Balancer misuses dfs.heartbeat.interval as milliseconds.
     (szetszwo)
 
+    HDFS-1728. SecondaryNameNode.checkpointSize is in bytes but not in MB.
+    (szetszwo)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
